start add greenplum