@@ -12,4 +12,4 @@ RUN mkdir /app
 
 COPY --from=build /home/gradle/src/build/libs/spark-edu.jar /app/spark-edu.jar
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spark-edu.jar"]
+ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spark-edu.jar"]
